--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -19,6 +19,7 @@
 
   <link th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}" />
+  <link rel="stylesheet" th:href="@{/resources/css/chat.css}" />
 
 </head>
 
@@ -86,8 +87,34 @@
       </div>
     </div>
   </div>
+  <div class="chatbox" id="chatbox">
+    <div class="chatbox-header" onclick="toggleChatbox()">
+      Chat with Us!
+    </div>
+    <div class="chatbox-content" id="chatbox-content">
+      <div class="chatbox-messages" id="chatbox-messages">
+        <!-- Chat messages will be dynamically inserted here -->
+      </div>
+      <div class="chatbox-footer">
+        <input type="text" id="chatbox-input" placeholder="Type a message..." onkeydown="handleKeyPress(event)" />
+        <button onclick="sendMessage()">Send</button>
+      </div>
+    </div>
+  </div>
+
+
 
   <script th:src="@{/webjars/bootstrap/5.3.3/dist/js/bootstrap.bundle.min.js}"></script>
+
+  <!-- JavaScript for handling chatbox interaction -->
+  <script th:src="@{/resources/js/chat.js}"></script>
+  <script>
+    // Call loadChatMessages when the page loads
+    window.onload = loadChatMessages;
+
+    // Ensure messages are saved when navigating away
+    window.onbeforeunload = saveChatMessages;
+  </script>
 
 </body>
 
