Restore markdown display

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -105,6 +105,7 @@
 
 
   <script th:src="@{/webjars/bootstrap/5.3.3/dist/js/bootstrap.bundle.min.js}"></script>
+  <script th:src="@{/webjars/marked/14.1.2/marked.min.js}"></script>
 
   <!-- JavaScript for handling chatbox interaction -->
   <script th:src="@{/resources/js/chat.js}"></script>
